# shardora

./: .gitignore  .gitmodules  1.txt  ACCOUNT_INITIALIZATION_FIX.md  AKAVERSE_PAPER_ANALYSIS.md  AMM_SOLUTION_DEMO.md  API_FIELD_NAME_FIX.md  APP_LAYER_NETWORK_DELAY_IMPLEMENTATION.md  APP_LAYER_NETWORK_DELAY_USAGE.md  BLOCK_PRODUCTION_ISSUE.md  BLS_DKG_ELECTION_CONSENSUS.md  BUILD_THIRD_PARTY_FIX_SOLUTION.md  CHANGELOG_EIP1559.md  CI_BUILD_FIX_SUMMARY.md  CLIENT_NONCE_OPTIMIZATION.md  CMakeLists.txt  CODE_STATISTICS.md  COMPILATION_FIX_SUMMARY.md  COMPILE_AND_TEST_EIP1559.md  COMPILE_AND_TEST_SIGNATURE_FIX.md  COMPREHENSIVE_OPTIMIZATION_REPORT.md  CONTRACT_CHAIN_DEMO_QUICKSTART.md  CONTRACT_CHAIN_QUERY_LOGIC.md  CONTRACT_CHAIN_QUERY_QUICKSTART.md  CONTRACT_CHAIN_SAME_SHARD_POOL_DEMO.md  CONTRACT_RIPEMD160_IMPLEMENTATION.md  DETAILED_ERROR_LOGGING.md  Dockerfile  DockerfileDevel  EIP1559_ADDRESS_REGISTRATION_ISSUE.md  EIP1559_BUG_FIX.md  EIP1559_CURRENT_STATUS.md  EIP1559_DOUBLE_PREFIX_FIX.md  EIP1559_FINAL_FIX.md  EIP1559_IMPLEMENTATION.md  EIP1559_NO_FLIP_SOLUTION.md  EIP1559_QUICK_REFERENCE.md  EIP1559_README.md  EIP1559_SIGNATURE_RECOVERY_DEBUG.md  EIP1559_SIGNATURE_VERIFICATION_FIX.md  (+256 more)
ci/: deploy.sh  (+2 more)
src/big_num/tests/: CMakeLists.txt  test_snark.cc
src/block/: CMakeLists.txt  Makefile  account_lru_map.h  account_manager.cc  account_manager.h  block_manager.cc  block_manager.h  block_proto.h  block_utils.cc  block_utils.h  cmake_install.cmake  cross_block_manager.h
src/block/tests/: CMakeLists.txt  Makefile
src/bls/tests/: CMakeLists.txt  test_agg_bls.cc  test_bls.cc  test_main.cc
src/broadcast/tests/: CMakeLists.txt  test_filter_broadcast.cc
src/ck/tests/: CMakeLists.txt  test_ck_client.cc
src/common/: CMakeLists.txt  Makefile  bitmap.cc  bitmap.h  bloom_filter.cc  bloom_filter.h  cmake_install.cmake  config.cc  config.h  country_code.h  defer.h  encode.cc  encode.h  fixed_queue.h  flow_control.h  fts_tree.cc  fts_tree.h  global_info.cc  global_info.h  hash.cc  hash.h  ip.cc  ip.h  limit_hash_map.h  limit_hash_set.h  limit_heap.cc  limit_heap.h  lof.cc  lof.h  log.h  lru_map.h  lru_set.h  node_members.h  parse_args.cc  parse_args.h  random.cc  random.h  range_set.h  shell_utils.h  spin_mutex.h  (+18 more)
src/common/tests/: CMakeLists.txt  test_bitmap.cc  test_bloom_filter.cc  test_config.cc  test_ei.cc  test_encode.cc  test_fixed_queue.cc  test_fts_tree.cc  test_hash.cc  test_ip.cc  test_limit_heap.cc  test_main.cc  test_parse_args.cc  test_random.cc  test_spin_mutex.cc  test_split.cc  test_string_utils.cc  test_thread_safe_queue.cc  test_tick.cc  test_unique_map.cc  test_unique_set.cc  test_utils.cc
src/common/tick/: thread_pool.cc  thread_pool.h  tick.cc
src/consensus/: CMakeLists.txt  Makefile  cmake_install.cmake  consensus.h  consensus_utils.cc  consensus_utils.h  waiting_txs.h  waiting_txs_pools.cc  waiting_txs_pools.h
src/consensus/hotstuff/: #hotstuff.cc#  #pacemaker.cc#  #utils.h#  #view_block_chain_manager.cc#  #view_block_chain_syncer.h#  .#hotstuff.cc  agg_bls.cc  agg_crypto.cc  agg_crypto.h  block_acceptor.cc  block_acceptor.h  block_acceptor_manager.cc  block_acceptor_manager.h  block_executor.h  block_wrapper.cc  block_wrapper.h  consensus.h  consensus_statistic.cc  consensus_statistic.h  consensus_statistic_acceptor.cc  consensus_statistic_acceptor.h  crypto.cc  crypto.h  elect_info.h  hotstuff.cc  hotstuff.h  hotstuff_manager.cc  hotstuff_manager.h  hotstuff_syncer.cc  hotstuff_syncer.h  hotstuff_utils.h  leader_rotation.cc  leader_rotation.h  pacemaker.cc  pacemaker.h  root_block_executor.cc  rule.h  shard_block_executor.cc  storage_lru_map.h  types.cc  (+13 more)
src/consensus/tests/: CMakeLists.txt  init_acc  test_timeblock.cc  test_tx.cc  test_waiting_txs.cc  test_waiting_txs_pools.cc
src/init/: #genesis_block_init.cc#  #network_init.cc#  .#network_init.cc  CMakeLists.txt  Makefile  cmake_install.cmake  command.cc  command.h  genesis_block_init.cc  genesis_block_init.h  http_handler.cc  http_handler.h  init_utils.h  network_init.cc  network_init.h  tx_ws_server.cc  tx_ws_server.h  uws_adapter.h  ws_server.cc  ws_server.h
src/network/: CMakeLists.txt  Makefile  bootstrap.cc  bootstrap.h  cmake_install.cmake  dht_manager.cc  dht_manager.h  neighbor_ip_manager.h  network_proto.cc  network_proto.h  network_status.h  network_utils.h  route.cc  route.h  shard_network.h  universal.cc  universal.h  universal_manager.cc  universal_manager.h
src/pools/: CMakeLists.txt  Makefile  account_qps_lru_map.h  cmake_install.cmake  cross_block_manager.h  cross_pool.cc  cross_pool.h  height_tree_level.cc  height_tree_level.h  leaf_height_tree.cc  leaf_height_tree.h  root_cross_pool.cc  root_cross_pool.h  root_statistic.cc  root_statistic.h  shard_statistic.cc  shard_statistic.h  to_confirm_latency_tracker.cc  to_confirm_latency_tracker.h  to_txs_pools.cc  to_txs_pools.h  tx_pool.cc  tx_pool.h  tx_pool_manager.cc  tx_pool_manager.h  tx_utils.h  unique_hash_lru_set.h
src/security/: CMakeLists.txt  Makefile  cmake_install.cmake  eth_verify.h  security.cc  security.h  security_utils.h
src/sethvm/: CMakeLists.txt  execution.cc  seth_host.h  sethvm_utils.h
src/tnet/: CMakeLists.txt  Makefile  cmake_install.cmake  tcp_acceptor.cc  tcp_acceptor.h  tcp_connection.cc  tcp_connection.h  tcp_interface.h  tnet_transport.cc  tnet_transport.h  tnet_utils.h
src/transport/: CMakeLists.txt  Makefile  cmake_install.cmake  encoder_factory.h  msg_decoder.cc  msg_decoder.h  msg_encoder.h  multi_thread.cc  multi_thread.h  network_delay_simulator.h  processor.cc  processor.h  sync_broadcast.cc  sync_broadcast.h  tcp_transport - 副本.cc  tcp_transport - 副本.h  tcp_transport.cc  tcp_transport.cc_o  tcp_transport.h  tcp_transport.h_o  transport_utils.h  uv_tcp_transport.cc  uv_tcp_transport.h
src/vss/: CMakeLists.txt  Makefile  cmake_install.cmake  random_num.h  vss_manager.cc  vss_manager.h  vss_proto.cc  vss_proto.h  vss_utils.h
src/websocket/: CMakeLists.txt  Makefile  cmake_install.cmake  websocket_client.cc  websocket_client.h  websocket_server.cc  websocket_server.h  websocket_utils.h
(+4407 files in other folders)
